--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     background-color: #ededed;
     width: 100%;
-    padding: 65px 0px 80px 424px;
+    padding: 65px 0px 80px 422px;
 
     .footerSection {
         display: flex;
@@ -10,6 +10,22 @@
         gap: 8px;
         max-width: 240px;
         margin-right: 80px;
+
+        h3,
+        p {
+            font-size: 15px;
+            letter-spacing: -0.02em;
+            line-height: 1.4;
+        }
+
+        .niche {
+            font-weight: 600;
+            margin: 11px 0 2px;
+        }
+
+        .margin {
+            margin-bottom: 10px;
+        }
     }
 
     .companySection {
@@ -24,6 +40,7 @@
         h3 {
             font-size: 14px;
             font-weight: 400;
+            margin-bottom: 2px;
         }
     }
 }
