--- a/src/app/components/Settings/Settings.module.scss
+++ b/src/app/components/Settings/Settings.module.scss
@@ -9,6 +9,10 @@
     box-sizing: border-box;
     background-color: #e4e4e4;
     cursor: pointer;
+
+    .settingsIcon {
+        user-select: none;
+    }
 }
 
 .isExpanded {
