Setup settings button functionality

--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -18,6 +18,10 @@
             line-height: 1.4;
         }
 
+        p {
+            cursor: pointer;
+        }
+
         .niche {
             font-weight: 600;
             margin: 11px 0 2px;
