--- a/src/app/components/Settings/Settings.module.scss
+++ b/src/app/components/Settings/Settings.module.scss
@@ -5,16 +5,49 @@
     padding: 12px;
     z-index: 1000;
     width: 60px;
+    height: 64px;
     border-radius: 12px;
     box-sizing: border-box;
     background-color: #e4e4e4;
     cursor: pointer;
+    transition: width 0.235s, height 0.235s;
 
     .settingsIcon {
         user-select: none;
     }
+
+    .checkIcon {
+        margin: 0 0 7px 5px;
+        cursor: pointer;
+    }
+    
+    .wheelIcon {
+        position: absolute;
+        bottom: 16px;
+    }
 }
 
 .isExpanded {
-
+    width: 240px;
+    height: 300px;
+    background-color: #e4e4e4;
+    display: flex;
+    flex-direction: column;
+    cursor: default;
+    justify-content: flex-end;
 }
+
+.settingsContent {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding-bottom: 18px;
+    padding-left: 6px;
+
+    .settingsRow {
+
+    }
+}
+
+
+
