--- a/src/app/components/Settings/Settings.module.scss
+++ b/src/app/components/Settings/Settings.module.scss
@@ -28,8 +28,8 @@
 }
 
 .isExpanded {
-    width: 240px;
-    height: 300px;
+    width: 233px;
+    height: 284px;
     background-color: #e4e4e4;
     display: flex;
     flex-direction: column;
@@ -41,11 +41,45 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    padding-bottom: 18px;
+    padding-bottom: 30px;
     padding-left: 6px;
 
     .settingsRow {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
 
+        h3 {
+            font-family: "Inter", sans-serif;
+            font-size: 18px;
+        }
+
+        .settingsOptions {
+            display: flex;
+            gap: 4px;
+
+            button {
+                padding: 4px 10px;
+                font-size: 14px;
+                font-family: "Inter", sans-serif;
+                cursor: pointer;
+                border: none;
+                background-color: #919191;
+                color: white;
+                border-radius: 6px;
+                transition: background-color 0.15s;
+
+                &:hover {
+                    background-color: #505050;
+                }
+            }
+
+            p {
+                font-size: 14px;
+                margin-top: -4px;
+                cursor: pointer;
+            }
+        }
     }
 }
 
