--- a/src/app/components/Settings/Settings.module.scss
+++ b/src/app/components/Settings/Settings.module.scss
@@ -6,7 +6,7 @@
     z-index: 1000;
     width: 60px;
     height: 64px;
-    border-radius: 12px;
+    border-radius: 14px;
     box-sizing: border-box;
     background-color: #e4e4e4;
     cursor: pointer;
@@ -29,7 +29,7 @@
 
 .isExpanded {
     width: 233px;
-    height: 273px;
+    height: 287px;
     background-color: #e4e4e4;
     display: flex;
     flex-direction: column;
@@ -40,18 +40,21 @@
 .settingsContent {
     display: flex;
     flex-direction: column;
-    gap: 12px;
-    padding-bottom: 22px;
-    padding-left: 6px;
+    gap: 10px;
+    padding-bottom: 14px;
 
     .settingsRow {
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        gap: 6px;
+        background-color: white;
+        padding: 5px 8px 8px 9px;
+        border-radius: 14px;
+        transition: 0.2s opacity;
 
         h3 {
             font-family: "Inter", sans-serif;
-            font-size: 18px;
+            font-size: 17px;
             color: #0A2540;
         }
 
